--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,13 @@ Django==4.1
 djangorestframework==3.13.1
 iniconfig==1.1.1
 packaging==21.3
+Pillow==9.2.0
 pluggy==1.0.0
 psycopg2==2.9.3
 py==1.11.0
 pyparsing==3.0.9
 pytest==7.1.2
+python-dotenv==0.20.0
 pytz==2022.2.1
 sqlparse==0.4.2
 tomli==2.0.1
